# mcp-jsondiff

./: README.md  main.py  pyproject.toml
src/mcp_jsondiff_kel/: __init__.py  __main__.py  server.py
